--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
-    "react-scripts": "1.1.5"
+    "react-router": "^3.2.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.5",
+    "webpack": "^3.11.0",
+    "yarn": "^1.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
