--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "create-react-class": "^15.6.3",
     "react": "^16.5.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.0",
+    "react-redux": "^5.0.7",
     "react-router": "^3.2.1",
     "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.5",
-    "webpack": "^3.11.0",
+    "redux": "^4.0.0",
+    "uuid": "^3.3.2",
+    "webpack": "^3.12.0",
     "yarn": "^1.9.4"
   },
   "scripts": {
